# Ping37_interoperabiliteData

./: .env  .gitignore  README.md  build_eds_with_fhir.py  edsan_to_fhir.py  endpoints.py  export_edsan_to_fhir.py  gitignore  podman-compose.yml  requirements.txt
app/: Dockerfile  README.md  main.py  requirements.txt
app/api/: TECHNICAL_GUIDE.md  endpoints.py
app/core/config/: TECHNICAL_GUIDE.md  mapping.json  merge_keys.py
app/core/converters/: TECHNICAL_GUIDE.md  build_eds_with_fhir.py  eds_merge.py  edsan_to_fhir.py  edsan_to_fhir_1.py  export_edsan_to_fhir.py  fhir_to_edsan.py  mapping.json
app/core/models/: edsan_models.py  fhir_models.py
app/core/utils/: display_eds.py
app/utils/: TECHNICAL_GUIDE.md  display_eds  display_eds.py  filter_dataset.py  filter_then_export_edsan_to_fhir.py  helpers.py
app/web/: TECHNICAL_GUIDE.md  routes.py
app/web/static/: style.css
app/web/templates/: base.html  convert.html  (+7 more)
client_pkg/: Dockerfile  README.md  pyproject.toml
client_pkg/interoperabilite_cli.egg-info/: PKG-INFO  SOURCES.txt
client_pkg/src/: TECHNICAL_GUIDE.md  display_edsan.py  edsan_filter.py  edsan_filter_to_fhir.py  edsan_to_fhir_cli.py  import_url.py  main.py
client_pkg/src/interoperabilite_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eds/: biol.parquet  doceds.parquet  mvt.parquet  patient.parquet  pharma.parquet  pmsi.parquet
entrepot_fhir/: README.md  hapi-fhir-cli
entrepot_fhir/hapi-fhir-jpaserver-starter-master/: Dockerfile  docker-compose.yml  pom.xml
tests/: compare_fhir.py  test_quality.py
(+34 files in other folders)
